--- a/assets/css/main-c=1524092400.css
+++ b/assets/css/main-c=1524092400.css
@@ -296,3 +296,13 @@ a.logo:hover{color:white;}
   .animated-from-left {position: relative;height:100vh;}
   .logos-sc {max-width:700px;float: right}
 }
+@media all and (max-width: 699px) {
+  .video video {
+    width: 100% !important;
+  }
+}
+@media all and (min-width: 700px) {
+  .video video {
+    width: 100% !important;
+  }
+}
