--- a/assets/css/main-c=1524092400.css
+++ b/assets/css/main-c=1524092400.css
@@ -301,6 +301,61 @@ a.logo:hover{color:white;}
   .animated-from-left {position: relative;height:100vh;}
   .logos-sc {max-width:700px;float: right}
 }
+.staticrypt-page {
+  width: 360px;
+  padding: 0;
+  margin: auto;
+  margin-bottom: 50px;
+  box-sizing: border-box;
+}
+@media all and (min-width: 700px) {
+.staticrypt-page {
+max-width: 80% !important;
+}
+.
+}
+
+.login {
+  text-align:justify !important;
+  font-size:1.5em;
+}
+
+.staticrypt-form {
+  position: relative;
+  z-index: 1;
+  background: ;
+  max-width: 360px;
+  padding: 45px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+.staticrypt-form input {
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+
+.staticrypt-form .staticrypt-decrypt-button {
+  text-transform: uppercase;
+  outline: 0;
+  background: orange;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.staticrypt-form .staticrypt-decrypt-button:hover, .staticrypt-form .staticrypt-decrypt-button:active, .staticrypt-form .staticrypt-decrypt-button:focus {
+  background: darkorange;
+}
 @media all and (max-width: 699px) {
   .video video {
     width: 100% !important;
