--- a/assets/css/main-c=1524092400.css
+++ b/assets/css/main-c=1524092400.css
@@ -360,11 +360,11 @@ max-width: 80% !important;
   .video video {
     width: 100% !important;
   }
-  .desktop {display:none}
+  .desktop {display:none !important;}
 }
 @media all and (min-width: 700px) {
   .video video {
     width: 100% !important;
   }
-  .mobile {display:none}
+  .mobile {display:none !important;}
 }
