--- a/assets/css/main-c=1524092400.css
+++ b/assets/css/main-c=1524092400.css
@@ -366,5 +366,5 @@ max-width: 80% !important;
   .video video {
     width: 100% !important;
   }
-  .mobile img {display:none !important;}
+  .mobilt img {display:none !important;}
 }
