--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,88 @@ container padd: 1.351351vw;
   font-style: normal;
   font-stretch: normal;
 }
+
+/* Timeline */
+.timeline {
+  border-left: 4px solid orange;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+  background: rgba(255, 255, 255, 0.03);
+  color: rgba(255, 255, 255, 0.8);
+  font-family: 'Chivo', sans-serif;
+  margin: 50px auto;
+  letter-spacing: 0.5px;
+  position: relative;
+  line-height: 1.4em;
+  font-size: 1.03em;
+  padding: 50px;
+  list-style: none;
+  text-align: left;
+  font-weight: 100;
+  max-width: 70%;
+}
+.timeline h1.h1 {
+  font-family: 'Saira', sans-serif;
+  letter-spacing: 1.5px;
+  font-weight: 100;
+  font-size: 1.4em;
+}
+.timeline h2.h2,
+.timeline h3.h3 {
+  font-family: 'Saira', sans-serif;
+  letter-spacing: 1.5px;
+  font-weight: 400;
+  font-size: 1.4em;
+}
+.timeline p {
+  font-size: 1em !important;
+}
+.timeline p.footer {
+  font-size: 0.8em !important;
+  padding-bottom: 0px;
+}
+.timeline .event {
+  border-bottom: 1px dashed rgba(255, 255, 255, 0.1);
+  padding: 20px 50px 20px 50px;
+  position: relative;
+  max-height: 400px;
+}
+.timeline .event:last-of-type {
+  padding-bottom: 0;
+  margin-bottom: 0;
+  border: none;
+}
+.timeline .event:before,
+.timeline .event:after {
+  position: absolute;
+  display: block;
+  top: 0;
+}
+.timeline .event:before {
+  left: -170px;
+  color: rgba(255, 255, 255, 1);
+  content: attr(data-date);
+  text-align: right;
+  font-weight: 100;
+  font-size: 0.9em;
+  min-width: 120px;
+  font-family: 'Saira', sans-serif;
+  top: 46%;
+}
+.timeline .event:after {
+  box-shadow: 0 0 0 4px #ffa500;
+  left: -12px;
+  background: #313534;
+  border-radius: 50%;
+  height: 20px;
+  width: 20px;
+  content: "";
+  top: 48%;
+}
+ul.timeline {
+  padding-bottom: 0px !important;
+}
+
 ::selection { background: transparent; color: inherit; }
 ::-moz-selection { background: transparent; color: inherit; box-shadow: none; }
 body {
@@ -22,7 +104,7 @@ body {
   font-size: 4.8vw;
   line-height: 6.666667vw;
   color: #fff;
-  background-color: #18191d;
+  background: #131313 !important;
   position: relative;
 }
 body.day {
